[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pjsekai.scores"
version = "0.0.1"
authors = [
  { name="Amaoto", email="amaoto@pjsekai.moe" },
]
description = "Render Project Sekai score files (sus) to images (svg). "
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools.package-data]
"*" = ["*.css"]
